# quickdraw-rzv2n

./: .gitignore  README.md  generate_calibration.py  quick_draw_studio.py  test_preprocessing.py
board_app/: CMakeLists.txt  build.sh  compile_model.sh  config.ini  config.json  config_pc.json  deploy.sh  docker_build.sh  package.sh  pc_inference_server.py  quickdraw_gui.py  run.sh  run_pc.sh
board_app/src/: classification.cpp  classification.h  define.h  drpai_inference.cpp  drpai_inference.h  gui.cpp  gui.h  main.cpp  main_gui.cpp  preprocessing.cpp  preprocessing.h
board_app/toolchain/: runtime.cmake
docs/: APP.md  BUILD.md  INSTALL.md  TRAINING.md
train/: download_dataset.py  download_ndjson.py  train.py
